# rgb_matrix_udp

./: .gitignore  README.md  configure-rpi.sh  disable-extraneous-services.sh  nanosleep.h  rgb_driver.circ  rgb_driver_hex.hex  update-rpi.sh
avr/: CMakeLists.txt  build.sh  clkout.h  gpio.c  gpio.h  leds.h  main.c  matrix.h  mux.h  rgb_matrix.elf  rgb_matrix.hex  sram.c  sram.h
eagle/: driver.brd  driver.sch  driver2.brd  driver2.sch  driver3.brd  driver3.sch
logisim/: rgb_driver.circ  rgb_driver.hex
udp_receiver/: CMakeLists.txt  Interleaving.cpp  Interleaving.h  MatrixDriver.cpp  MatrixDriver.h  RowEncoding.cpp  RowEncoding.h  Transforming.cpp  Transforming.h  build.sh  install.sh  logging.h  main.cpp  main2.cpp  rgb-matrix-udp-receiver.service  rpi-boot-config.txt  rpi-boot-config_qiangli_768x256.txt
udp_transmitter/: CMakeLists.txt  build.sh  clock.cpp  config.json  install.sh  logging.cpp  main.cpp  rgb-matrix.service  testing.cpp
xilinx_ise/: driver.sch
